# Data-Science-Practice-Projects

./: .gitignore  README.md
Fake News Detection using NLP/: Fake_News_Detector_NLP.ipynb  NLP_fake_news_deploy.ipynb
Fake News Detection using NLP/.ipynb_checkpoints/: Fake_News_Detector_NLP-checkpoint.ipynb  NLP_fake_news_deploy-checkpoint.ipynb
Fashion-MNIST Classifier/: Fashion-MNIST_Dataset_Classifier.ipynb
Fashion-MNIST Classifier/fashion_model_dropout.h5py/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Fashion-MNIST Classifier/fashion_model_dropout.h5py/variables/: variables.index
Instagram Reach Analysis/: Instagram-Reach-Analysis.ipynb
Predict Success of a Zomato Restaurant /: ML_Zomato_Prediction_deploy.ipynb  Zomato-Project.ipynb
Predict Success of a Zomato Restaurant /.ipynb_checkpoints/: Zomato-Project-checkpoint.ipynb
Sales of Product Prediction - Time Series /: Time_series_product_sales_prediction.ipynb
Sales of Product Prediction - Time Series /.ipynb_checkpoints/: Time_series_product_sales_deploy-checkpoint.ipynb  Time_series_product_sales_prediction-checkpoint.ipynb
Sample Accessing Google Drive Files/: Access_Drive_Files.ipynb
Sample Accessing Google Drive Files/files/: pyproject.toml
Sample Accessing Google Drive Files/files/files/: download_files_folders.py
Stroke Prediction/: Stroke_Prediction.ipynb
