[tool.poetry]
name = "files"
version = "0.1.0"
description = ""
authors = ["Nath <nathalia.barreirosf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-auth-oauthlib = "^1.0.0"
google-api-python-client = "^2.83.0"
argparse = "^1.4.0"
apiclient = "^1.0.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
